@@ -118,7 +118,7 @@ MENUS_HEADING_ASSIGN_MODULE=Module
 MENUS_HEADING_ASSIGN_POSITION=Position
 MENUS_HEADING_ASSIGN_SHOW=Show
 MENUS_ITEM_MODULE_ASSIGNMENT=Module Assignment for this Menu Item
-MENUS_ITEM_MODULE_ASSIGNMENT_DESC=Modules can be assigned to <strong>All</strong> menu items, or set to <strong>Show</strong> only on this menu item, or set to <strong>Hide</strong> only on this menu item, or set to <strong>Ignore</strong> the module on this menu item. Note that changing settings will affect the assignments on other menu items.
+MENUS_ITEM_MODULE_ASSIGNMENT_DESC=Below is a list of modules assigned to this menu item. Click the <strong>Change</strong> button to add or remove module assignments.
 MENUS_ITEM_OPTIONS=Options
 MENUS_ITEM_MODULE_ACCESS_POSITION=%1$s <small>(%2$s in %3$s)</small>
 
