@@ -29,11 +29,12 @@ MOD_MENU_READ_PRIVATE_MESSAGES=Mod menu Read Private Messages
 
 
 MOD_MENU_HELP=Help
-MOD_MENU_JOOMLA_HELP=Joomla Help
+MOD_MENU_HELP_JOOMLA=Joomla Help
 MOD_MENU_HELP_CURRENT=Help with this page
-MOD_MENU_HELP_COMMUNITY=Community News
+MOD_MENU_HELP_COMMUNITY=Community Portal
 MOD_MENU_HELP_DOCUMENTATION=Documentation Wiki
 MOD_MENU_HELP_EXTENSIONS=Joomla Extensions
+MOD_MENU_HELP_TRANSLATIONS=Joomla Translations
 MOD_MENU_HELP_RESOURCES=Joomla Resources
 MOD_MENU_HELP_SUPPORT_FORUM=Support Forum
 MOD_MENU_HELP_DEVELOPER=Developer Resources
@@ -62,7 +63,7 @@ MOD_MENU_MENU_MANAGER=Menu Manager
 
 MOD_MENU_SITE=Site
 MOD_MENU_CONTROL_PANEL=Control Panel
-MOD_MENU_LOGOUT= Logout
-MOD_MENU_SITE_MAINTENANCE= Site Maintenance
+MOD_MENU_LOGOUT=Logout
+MOD_MENU_SITE_MAINTENANCE=Site Maintenance
 MOD_MENU_SYSTEM_INFORMATION=System Information
 
