@@ -27,6 +27,11 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+28-Sep-2009 Ron Severdia
+# CSS fixes
+$ Missing language strings added
+^ Replaced tables from user config
+
 28-Sep-2009 Gergo Erdosi
  # Fixed bug in installation SQL file.
 
